--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Live Counter</title>
+	<meta name="viewport" content="initial-scale=1.0">
 	<style>
 		html, body {
 			width: 100vw;
